2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in: remove a warning under 5.8.x

2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.3

2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* bootstrap.pl:  Allow bootstrapping with perl 5.6.1 (subjected
	to a test to make sure /usr/bin/perl5.6.1 is functional)

2003-06-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* merged release_0_13_2 branch back into HEAD; the 0.13.2 release
	contained only today's pathsetup.command change, not the earlier 
	changes

2003-06-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.2

2003-06-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl, install.sh, pathsetup.command.in, setup.sh:
	add the "pathsetup.command" shell script, to be installed along with
	fink, which helps users set their paths

2003-06-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: allow bootstrapping with perl 5.8.1 too

2003-06-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: allow bootstrapping with either perl 5.6.0 or
	perl 5.8.0

2003-06-04  Chris Zubrzycki <beren12@users.sourceforge.net>

	* fink.8.in: add usage docs for maintainer and tree searches

2003-05-25  Benjamin Reed <rangerrick@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.1

2003-05-20  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.0

2003-05-14  Dave Morrison <dmrrsn@users.sourceforge.net>

	* fink.info.in: add "fink index" at end of postinstall, for transition to
	  allowing versioned perl module packages (see Patch #725415).

2003-05-07  Rob Braun <bbraun@users.sourceforge.net>

	* bootstrap.pl: Remove hard coded references to 'powerpc' (Patch #732058).

2003-05-04  Max Horn <max@quendi.de>

	* bootstrap.pl, inject.pl: Fixed inject.pl.
