@@ -1,3 +1,9 @@
+2003-07-06  Peter O'Gorman <ogorman@users.sourceforge.net>
+
+	* VirtPackage.pm, Config.pm, Engine.pm, Package.pm, PkgVersion.pm, 
+	Bootstrap.pm, Status.pm:
+	Move all virtual package stuff to one file, add fink-virtual-pkgs file.
+
 2003-07-05  Dave Morrison <dmrrsn@users.sourceforge.net>
 
 	* PkgVersion.pm: Revision of "Type: perl" to handle changes in 5.8.0
